Revert "fix: Align property filter token light height with operation selector (#2443)"
This reverts commit 061677bb364056794033239a24e590a56d0cd1d0.

--- a/src/property-filter/styles.scss
+++ b/src/property-filter/styles.scss
@@ -101,9 +101,6 @@
 
 .token-trigger {
   @include styles.text-wrapping;
-
-  // Setting line height to match line height of the Select component used for operation selector.
-  line-height: awsui.$line-height-body-m;
 }
 
 .remove-all,
